[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Tooltip/Tooltip.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.121569, 0.223529, 0.458824, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.027451, 0.0745098, 0.184314, 1 )
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.121569, 0.223529, 0.458824, 1 )

[node name="Tooltip" type="CanvasLayer"]
layer = 2
visible = false

[node name="TooltipContainer" type="PanelContainer" parent="."]
margin_right = 264.0
margin_bottom = 132.0
rect_min_size = Vector2( 328, 132 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="TooltipContentContainer" type="HBoxContainer" parent="TooltipContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 326.0
margin_bottom = 130.0
rect_min_size = Vector2( 260, 128 )
mouse_filter = 2

[node name="Sprite" type="TextureRect" parent="TooltipContainer/TooltipContentContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 0 )
mouse_filter = 2
size_flags_vertical = 3
stretch_mode = 5

[node name="TooltipTextContainer" type="PanelContainer" parent="TooltipContainer/TooltipContentContainer"]
margin_left = 132.0
margin_right = 324.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="TooltipTextContentContainer" type="VBoxContainer" parent="TooltipContainer/TooltipContentContainer/TooltipTextContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 188.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Title" type="RichTextLabel" parent="TooltipContainer/TooltipContentContainer/TooltipTextContainer/TooltipTextContentContainer"]
margin_right = 184.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2
scroll_active = false

[node name="Description" type="RichTextLabel" parent="TooltipContainer/TooltipContentContainer/TooltipTextContainer/TooltipTextContentContainer"]
margin_top = 36.0
margin_right = 184.0
margin_bottom = 120.0
mouse_filter = 2
size_flags_vertical = 3
scroll_active = false
